--- a/style.css
+++ b/style.css
@@ -1,10 +1,34 @@
 *{
     box-sizing: border-box;
 }
+h1 {
+    font-family: "Open Sans", sans-serif;
+    font-size: 36px;
+    font-weight: bold;
+}
+.headline {
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    color: #E1624F;
+    text-transform: uppercase;
+}
+#subtitle{
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: italic;
+}
+#subtitle span {
+    display: block;
+    text-align: center;
+    
+}
 #viagem img {
     width: 1120px;
     height: 660px;
-    border-radius: 28px;
+}
+#historia .headline{
+    margin-top: 40px;
 }
 .banner {
     width: 1120px;
