--- a/style.css
+++ b/style.css
@@ -1,39 +1,7 @@
 *{
     box-sizing: border-box;
-}
-h1 {
-    font-family: "Open Sans", sans-serif;
-    font-size: 36px;
-    font-weight: bold;
-}
-.headline {
-    font-family: "Open Sans", sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-    color: #E1624F;
-    text-transform: uppercase;
-}
-#subtitle{
-    font-family: "Open Sans", sans-serif;
-    font-size: 16px;
-    font-weight: italic;
-}
-#subtitle span {
-    display: block;
-    text-align: center;
-    
-}
-#viagem img {
-    width: 1120px;
-    height: 660px;
-}
-#historia .headline{
-    margin-top: 40px;
-}
-.banner {
-    width: 1120px;
-    height: 350px;
-    border-radius: 28px;
+    padding:0px;
+    margin:0px;
 }
 main  {
     background-color: #29292E;
@@ -41,12 +9,126 @@ main  {
     width: 1480px;
     height: 3439px;
     padding: 80px 100px;
-
+    margin: auto;
 }
 #container {
     background-color: #F5F4F0;
     margin:auto;
     width: 1280px;
     height: 3279px;
-    padding: 88px 80px 137px 80px;
+    padding: 48px 80px 137px 80px;
+}
+
+.headline {
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    color: #E1624F;
+    text-transform: uppercase;
+}
+.banner {
+    width: 1120px;
+    height: 350px;
+    border-radius: 28px;
+}
+h1 {
+    font-family: "Open Sans", sans-serif;
+    font-size: 36px;
+    font-weight: bold;
+    color:#1B1B1B;
+    margin-top: 8px;
+}
+#viagem img {
+    width: 1120px;
+    height: 660px;
+    margin-top: 40px;
+    margin-bottom: 24px;
+    border-radius: 28px;
+}
+#subtitle{
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: italic;  
+}
+ span {
+    display: block;
+    text-align: center;
+}
+.divider{
+    width: 100%;
+    height: 1px;
+    margin: 40px 0;
+    background-color: #d9d9d9;
+}
+#historia {
+    margin: 64px 0px;
+}
+#historia h2 {
+    padding-bottom: 8px;
+}
+h2 {
+    font-family: "Open Sans", sans-serif;
+    font-size: 32px;
+    font-weight: bold;
+    color:#1B1B1B;
+}
+p {
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: normal;
+    color:#333333;
+}
+section {
+    margin:48px 0px;
+}
+h3{
+    font-family: "Open Sans", sans-serif;
+    font-size: 28px;
+    font-weight: bold;
+    color:#1B1B1B;
+    padding:20px 0px 4px;
+}
+
+h3 + p {
+    margin:4px 0px 26px;
+}
+ul {
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    color:#333333;
+    list-style-position: inside;
+}
+footer{
+    margin-top: 15px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: normal;
+    color:#333333;
+    text-align: center;
+}
+footer img{
+    vertical-align: center;
+}
+ul li::marker {
+    color: #333333;
+    font-size: 0.8em;
+  }
+.list {
+    margin-left: 5px;
+}
+.bold {
+    font-weight: bold;
+}
+.purple{
+    color: #591B98;
+}
+.pink{
+    color:#E5245E;
+}
+.orange{
+    color: #E95E10;
+}
+.blue{
+    color: #0C51A7;
 }
